--- a/css/styles.css
+++ b/css/styles.css
@@ -3,5 +3,66 @@
 }
 
 body{
-    
+    font-family: "Montserrat",Arial, Helvetica, sans-serif;
+    font-size: 18px;
+}
+
+/* BARRE DE NAVIGATION */
+#nav {
+    position : fixed;
+    top:0;
+    left: 0;
+    display: flex;
+}
+.nav__link {
+    padding : 1rem 2rem;
+}
+
+/*MAIN*/
+#main, .years__container {
+    width: 100%;
+
+}
+
+.years__container {
+    display: flex;
+    flex-direction: column;
+}
+
+/*SINGLE YEAR*/
+.singleYear__container{
+    width: 100%;
+    height: 40vh;
+    background-color: aliceblue;
+    border: 1px solid gray;
+    display: flex;
+    align-items: center;
+    padding : 1.5rem;
+    overflow-x: scroll;
+}
+
+.singleYear__cover {
+    width : 150px;
+    height : 225px;
+    background-color: darkgrey;
+}
+
+/*CONFERENCES*/
+.conferences__container {
+
+    display: flex;
+}
+
+/*CONFERENCE*/
+.singleConference__container {
+    width : 30rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.singleConference__video {
+    width: 90%;
+    height : 15vh;
+    background-color: lightcoral;
 }
