--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,8 @@
 body{
     font-family: "Montserrat",Arial, Helvetica, sans-serif;
     font-size: 18px;
-    overflow : hidden;
-    
+    /* overflow : hidden; */
+
 }
 
 #content-container {
@@ -54,6 +54,9 @@ body{
     height : 55vh;
     margin-right: 1.5rem;
     background-color: darkgrey;
+    /*DEV ONLY*/
+    text-align: center;
+    padding : auto 0;
 
 }
 
@@ -61,11 +64,31 @@ body{
 .conferences__container {
     width: 88%;
     height: 60vh;
-    overflow-x: scroll;
+    overflow-x: hidden;
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
+    scroll-behavior:unset;
+
 }
+
+/* width */
+.conferences__container::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  /* Track */
+  .conferences__container::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+  }
+  
+  /* Handle */
+  .conferences__container::-webkit-scrollbar-thumb {
+    background: red;
+    border-radius: 10px;
+  }
+  
 
 /*CONFERENCE*/
 .singleConference__container {
