--- a/MRProto/css/styles.css
+++ b/MRProto/css/styles.css
@@ -126,17 +126,53 @@ body{
     width: 10%;
     height: 100vh;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
-
 .aside__container{
+    width: 80%;
+    height: 80%;
+    position : relative;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
-    justify-content: center;
+    align-content: center;
 }
+.aside__y--dot-container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: space-around;
+}
+
+.aside__y--dot{
+    height: 0.8rem;
+    width: 0.8rem;
+    border-radius: 50%;
+    background-color: black;
+    border : 1px solid black;
+    margin-right: 0.7rem;
+}
+
+
+.aside__y--text{
+    text-align: center;
+    width: 4rem;
+    font-size: 1rem;
+    padding: 0.2rem 0.75rem;
+    border-radius: 1.25rem;
+    border : 1px solid black;
+}
+
+.aside__y--canvas{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+
 
 .aside__link {
     font-weight: 600;
