--- a/MRProto/css/styles.css
+++ b/MRProto/css/styles.css
@@ -158,6 +158,7 @@ body{
 
 
 .aside__y--text{
+    opacity: 0;
     text-align: center;
     width: 4rem;
     font-size: 1rem;
@@ -165,6 +166,11 @@ body{
     border-radius: 1.25rem;
     border : 1px solid black;
 }
+
+.aside__y--text-show {
+    opacity: 1;
+}
+
 
 .aside__y--canvas{
     position: absolute;
